--- a/src/main/templates/base.html
+++ b/src/main/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
-    <title>Flask BloGFAA - {% block title %}{% endblock %}</title>
+    <title>Flask Blog - {% block title %}{% endblock %}</title>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
