--- a/src/main/templates/users/login.html
+++ b/src/main/templates/users/login.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="d-grid mb-3">
-            {{ form.submit(class="btn btn-primary") }}
+            {{ form.submit(class="btn btn-danger") }}
         </div>
         <p class="text-muted text-decoration-none">
             <a class=" text-decoration-none" href="{{ url_for('users.reset_request') }}">Forgot Password?</a>
